# python-multigit

./: .bme_env  .bme_project  .buildinfo  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  genindex.html  gitrepo.html  index.html  objects.inv  pyproject.toml  python-multigit-cmd.py  python-multigit.kdev4  requirements.txt  search.html  searchindex.js  subrepofile.html  subrepos  subrepos.html
.github/workflows/: documentation.yaml
.kdev4/: python-multigit.kdev4
_modules/: index.html  multigit.html
_modules/multigit/: __main__.html  gitrepo.html  subrepofile.html  subrepos.html
_sources/: gitrepo.rst.txt  index.rst.txt  subrepos.rst.txt
docs/: AI_DEVELOPMENT_PLAYBOOK.md  AI_DOCS_LANGUAGE_POLICY.md
example/: subrepos
lib/: README.md  pyproject.toml
lib/src/multigit/: __init__.py  exceptions.py  gitrepo.py  subrepos_schema.yaml
lib/src/tests/: __init__.py
lib/src/tests/gitrepo/: __init__.py  test_other.py  test_remote_operations.py
lib/src/tests/subrepos/: __init__.py
python-virtualenvs/: multigit-development.requirements
src/: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
src/multigit/: __init__.py  __main__.py  gitrepo.py  multigit.py  subrepo.py  subrepofile.py  subrepos.py  subrepos_file.py  subrepos_schema.yaml
src/multigit_cli/: __init__.py  __main__.py  console.py  subrepofile.py  subrepos.py
src/sphinx/: conf.py  gitrepo.rst  index.rst  subrepofile.rst  subrepos.rst
src/tests/: __init__.py  git_scaffold.py  subrepos.empty_repo  subrepos.standard  test_busy_directory.py  test_gitrepo.py  test_multigit.py  test_not_yet_cloned.py  test_subrepos.py
src/tests/gitrepo/: test_gitrepo.py  test_other.py  test_remote_operations.py
src/tests/helperfiles/: subrepos.nonexistent-branch
src/tests/subrepos/: __init__.py  test_subrepos.py
tools/ai/: check_docs_language.py  list_policy_ai_docs.py
