# -*- coding: utf-8 -*-
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = 'multigit'
authors = [
    { name  = 'Jesús M. Navarro', email = 'jesusmnavarrolopez@gmail.com' },
]

description = 'Manages git repos within git repos.'
readme = 'README.md'
keywords = ['Python', 'git-utilities']
license = { text = 'GPL-3.0' }
dynamic = ['version']
classifiers = [
	'Programming Language :: Python :: 3',
	'Development Status :: 5 - Production/Stable',
	'Environment :: Console',
	'Intended Audience :: Developers',
	'Topic :: Software Development :: Build Tools',
	'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
]

requires-python = '>=3.7'
dependencies = [
	'Cerberus',
	'colorama',
	'GitPython',
	'PyYAML',
]

[project.urls]
Documentation = 'https://jmnavarrol.github.io/python-multigit/'
Source = 'https://github.com/jmnavarrol/python-multigit'
'Bug Tracker' = 'https://github.com/jmnavarrol/python-multigit/issues'

[project.scripts]
multigit = 'multigit:__main__.main'

[project.optional-dependencies]
# Other dependencies for development environment
# Create a virtualenv with --editable "./[development]" to use them
development = [
	'hatch',
	'Sphinx',
	'sphinxcontrib-programoutput',
	'sphinx-rtd-theme',
	'twine',
]

[build-system]
requires = [
	'hatch',
]
build-backend = 'hatchling.build'

[tool.hatch.version]
path = 'src/multigit/__main__.py'

[tool.hatch.build]
packages = [
	'src/multigit',
]
# This strips 'src/' from the result (so package/module works as expected)
sources = ['src']

# This allows editable mode with --editable "./[development]"
dev-mode-dirs = ['src/']
