# -*- coding: utf-8 -*-
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = 'multigit-lib'
authors = [
    { name  = 'Jesús M. Navarro', email = 'jesusmnavarrolopez@gmail.com' },
]

description = 'Reusable library for managing git repositories within git repositories.'
readme = 'README.md'
keywords = ['Python', 'git-utilities', 'library']
license = { text = 'GPL-3.0' }
dynamic = ['version']
classifiers = [
	'Programming Language :: Python :: 3',
	'Development Status :: 5 - Production/Stable',
	'Intended Audience :: Developers',
	'Topic :: Software Development :: Libraries',
	'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
]

requires-python = '>=3.7'
dependencies = [
	'GitPython',
]

[project.urls]
Documentation = 'https://jmnavarrol.github.io/python-multigit/'
Source = 'https://github.com/jmnavarrol/python-multigit'
'Bug Tracker' = 'https://github.com/jmnavarrol/python-multigit/issues'

[project.optional-dependencies]
development = [
	'hatch',
]

[build-system]
requires = [
	'hatch',
]
build-backend = 'hatchling.build'

[tool.hatch.version]
path = 'src/multigit/__about__.py'

[tool.hatch.build]
packages = [
	'src/multigit',
]
# This strips 'src/' from the result (so package/module works as expected)
sources = ['src']

# This allows editable mode with --editable "./[development]"
dev-mode-dirs = ['src/']
