# See https://packaging.python.org/tutorials/packaging-projects/

[metadata]
name = multigit
version = attr: multigit.__version__
author = Jesús M. Navarro
author_email = "Jesús M. Navarro" <jesusmnavarrolopez@gmail.com>
description = Manages git repos within git repos.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmnavarrol/python-multigit
project_urls =
	Bug Tracker = https://github.com/jmnavarrol/python-multigit/issues

classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Topic :: Software Development :: Build Tools
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires =
	Cerberus  == 1.3.4
	colorama  == 0.4.3
	GitPython == 3.1.18
	PyYAML    == 5.4.1
	
[options.entry_points]
console_scripts =
	multigit = multigit:main
	
